set evm_version = "london"

--- a/foundry.toml
+++ b/foundry.toml
@@ -8,7 +8,7 @@ script = "scripts"
 libs = ["lib"]
 via_ir = false
 solc = "0.8.24"
-evm_version = "cancun"
+evm_version = "london"
 fs_permissions = [
   { access = "read-write", path = "./deployments" },
   { access = "read", path = "./out" },
