--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,7 @@ out = "out"
 test="test"
 script = "scripts"
 libs = ["lib"]
-via_ir = false
+via_ir = true
 solc_version = "0.8.24"
 evm_version = "london"
 fs_permissions = [
